--- a/04kensington/css/style.css
+++ b/04kensington/css/style.css
@@ -599,7 +599,7 @@ input[type="text"]{outline: none;}
 
     .foot_right{float: right;}
     
-    .sub #main_header{
+    .sub.location #main_header{
         height: 460px;position: relative;
         background: url(../images/sub01_bg.png) no-repeat center;
         background-size: cover;margin-bottom: 27px;
@@ -669,8 +669,8 @@ input[type="text"]{outline: none;}
     .conTitle.on{
         display: block;
     }
-    .conBottom img{display: none;margin-bottom: 40px;}
-    .conBottom img.on{display: block;}
+    .conBottom>img{display: none;margin-bottom: 40px;}
+    .conBottom>img.on{display: block;}
     .conBottom.mob{display: none;}
 
     .sub.promo #main_header{
