--- a/07company_1/css/style.css
+++ b/07company_1/css/style.css
@@ -1,1 +1,29 @@
 @charset "utf-8";
+
+#headerWrap .bgcolor{
+    position: absolute;width: 100%;height: 600px;
+    background-color: #0cbaba;
+    background-image: linear-gradient(316deg, #02ccba 0%, #aa7ecd 100%);
+    transform: skew(0, -15deg);
+    left: 0;top: -260px;
+}
+#headerWrap .video video{
+    width: 100%;object-fit: fill;
+    border-radius: 5px;box-shadow: 10px 10px 25px rgba(0,0,0,0.4);
+}
+#headerWrap .video .txt{position: absolute;bottom: 10px;left: 30px;}
+#headerWrap .card-view{
+    border-radius: 5px;overflow: hidden;
+    box-shadow: 10px 10px 25px rgba(0,0,0,0.4);
+}
+.slider .row{position: relative;}
+.slider .row h4{font-weight: normal;font-size: 18px;}
+.slider .slider-title{color: #7d97ad; font-size: 15px;}
+.slider .swiper-next{
+    position: absolute;top: 50%;right: 0;transform: translateY(-50%);
+    width: 20px; height: 38px;background-image: url(../images/right-arrow.svg);
+}
+.slider .swiper-prev{
+    position: absolute;top: 50%;left: 0;transform: translateY(-50%);
+    width: 20px; height: 38px;background-image: url(../images/left-arrow.svg);
+}
