--- a/07company_1/css/style.css
+++ b/07company_1/css/style.css
@@ -1,5 +1,10 @@
 @charset "utf-8";
 
+:root{
+    --primary-color:#02b3e4;
+    --secondary-color:#ff5483;
+}
+
 #headerWrap .bgcolor{
     position: absolute;width: 100%;height: 600px;
     background-color: #0cbaba;
@@ -27,3 +32,26 @@
     position: absolute;top: 50%;left: 0;transform: translateY(-50%);
     width: 20px; height: 38px;background-image: url(../images/left-arrow.svg);
 }
+.banner .card{
+    border: 0 none;border-radius: 5px;overflow: hidden;
+    box-shadow: 10px 10px 25px rgba(0,0,0,0.4);cursor: pointer;
+}
+.banner .card .card-img{position: relative;}
+.banner .card .mask{
+    background: rgba(2,240,228,0.3);
+    position: absolute;top: 0;
+    width: 100%;height: 100%;transition: 0.3s;
+}
+.banner .card:hover .mask{opacity: 0;}
+.advan .icon{
+    width: 80px;height: 80px;border-radius: 40px;
+    box-shadow: 10px 10px 25px rgba(0,0,0,0.4);
+}
+.advan .title1st{color:var(--primary-color);}
+.advan .img-view{position: relative;height: 400px;}
+.advan .img-view img{
+    position: absolute;border-radius: 5px;
+    box-shadow: 10px 10px 25px rgba(0,0,0,0.4);
+}
+.advan .img-view .img-1st{right: 0;top: 0;width: 400px;}
+.advan .img-view .img-2st{left: 0;bottom: 0;width: 300px;}
