--- a/07company_1/css/style.css
+++ b/07company_1/css/style.css
@@ -3,6 +3,7 @@
 :root{
     --primary-color:#02b3e4;
     --secondary-color:#ff5483;
+    --third-color:#AA79DB;
 }
 
 #headerWrap .bgcolor{
@@ -43,15 +44,54 @@
     width: 100%;height: 100%;transition: 0.3s;
 }
 .banner .card:hover .mask{opacity: 0;}
+
+.advan{position: relative;}
 .advan .icon{
-    width: 80px;height: 80px;border-radius: 40px;
+    width: 80px;height: 80px;
+    border-radius: 40px;background: #fff;
     box-shadow: 10px 10px 25px rgba(0,0,0,0.4);
 }
 .advan .title1st{color:var(--primary-color);}
+.advan .title2st{color:var(--secondary-color);}
+.advan .title3st{color:var(--third-color);}
 .advan .img-view{position: relative;height: 400px;}
-.advan .img-view img{
+.advan .img-view div{
     position: absolute;border-radius: 5px;
     box-shadow: 10px 10px 25px rgba(0,0,0,0.4);
 }
-.advan .img-view .img-1st{right: 0;top: 0;width: 400px;}
-.advan .img-view .img-2st{left: 0;bottom: 0;width: 300px;}
+.advan .img-view .img-1st{
+    right: 0;top: 0;width: 400px;
+    background: orange;height: 300px;
+}
+.advan .img-view .img-2st{
+    left: 0;bottom: 0;width: 300px;
+    background: skyblue;height: 200px;
+}
+.advan .img-view .img-3st{
+    left: 0;top: 0;width: 400px;
+    background: orange;height: 300px;
+}
+.advan .img-view .img-4st{
+    right: 0;bottom: 0;width: 300px;
+    background: skyblue;height: 200px;
+}
+.advan .img-view .img-5st{
+    right: 0;top: 0;width: 400px;
+    background: orange;height: 300px;
+}
+.advan .img-view .img-6st{
+    left: 0;bottom: 0;width: 300px;
+    background: skyblue;height: 200px;
+}
+.advan .bgcolor2{
+    position: absolute;width: 100%;height: 800px;
+    background-color: #0cbaba;
+    background-image: linear-gradient(316deg, #02ccba 0%, #aa7ecd 100%);
+    transform: skew(0, 15deg) translateY(-50%);
+    left: 0;top: 50%;
+}
+
+.contact{
+    background: url(../images/contact-cover.jpg) no-repeat center fixed;
+    background-size: cover;
+}
