--- a/07company_1/css/style.css
+++ b/07company_1/css/style.css
@@ -3,7 +3,7 @@
 :root{
     --primary-color:#02b3e4;
     --secondary-color:#ff5483;
-    --third-color:#AA79DB;
+    --third-color:#a951ed;
 }
 
 #headerWrap .bgcolor{
@@ -77,3 +77,17 @@
     background: url(../images/contact-cover.jpg) no-repeat center fixed;
     background-size: cover;
 }
+
+/* subpage */
+.subpage{
+    height: 300px;background: orange;
+    position: relative;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+.subpage.company{background-image: url(../images/contact-cover.jpg);}
+.subpage.cata{background-image: url(../images/nano2.jpg);}
+
+/* subcontent */
+.subcontent{position: relative;}
