--- a/08company/css/style.css
+++ b/08company/css/style.css
@@ -162,12 +162,13 @@ input[type="text"]{outline: none;}
 
 .open-title h2{font-size: 36px;font-weight: 700;}
 .open-title p{font-size: 20px;font-weight: 400;}
-.open-title .btn{font-size: 20px;font-weight: bold;}
+.open-title .btn{font-size: 20px;font-weight: bold;border: 0 none;}
 .open .card{
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
     background: rgba(255, 255, 255, 0.6);
     border-radius: 10px;overflow: hidden;
     cursor: pointer;border: 0 none;transition: 0.3s;
+    height: 100%;
 }
 .open .card:hover{transform: scale(1.1);}
 .open .card-body{
@@ -177,9 +178,20 @@ input[type="text"]{outline: none;}
 .open .card-title p{font-weight: 500;font-size: 16px;}
 .open .card-txt{font-weight: 400;font-size: 18px;color: #555;}
 .open .card-txt span{font-weight: bold;font-size: 24px;color: #21819E;}
-.open-img img{height: 100%;}
+/* .open-img img{height: 100%;} */
 
+.gd-title h4{font-weight: 700;font-size: 36px;}
+.gd-title p{font-size: 24px;}
+.gd-copy{font-weight: 500;font-size: 18px;color: #333;}
+.gd-copy .span1{font-weight: 700;}
+.gd-copy .span2{color: #21819E;}
+.gd-bar{height: 100%;width: 2px;background:var(--primary-color1);display: block;}
 
+.footer{background: #21262C;}
+.footer h4{color: #eee;font-weight: 700;font-size: 18px;}
+.footer p{color: #ccc;font-weight: 300;font-size: 14px;}
+.footer .news>ul{margin-left: 20px;}
+.footer .news>ul>li{list-style:disc;}
 
 @media screen and (min-width:1200px){/* xl */
     .headerWrap{position: relative;}
@@ -196,7 +208,7 @@ input[type="text"]{outline: none;}
     section{position: relative;top: -150px;z-index: 1;}
     .notice{position: relative;top: -150px;}
     .banner{position: relative;top: -150px;}
-    .menu{position: relative;top: -150px;}
+
     .menu2{position: relative;top: 130px;}
     .menu3{position: relative;top: -70px;}
     .menu2 h4{font-size: 30px;}
