--- a/07company_1/css/style.css
+++ b/07company_1/css/style.css
@@ -5,6 +5,7 @@
     --secondary-color:#ff5483;
     --third-color:#a951ed;
 }
+.navbar{transition:0.3s}
 .navbar.onView{background: #000;}
 #headerWrap .bgcolor{
     position: absolute;width: 100%;height: 600px;
