--- a/09fullpage/css/style.css
+++ b/09fullpage/css/style.css
@@ -5,6 +5,11 @@ body{font-family: 'Noto Sans KR', sans-serif;color: #262626;}
 
 .mb10{margin-bottom: 10px;}
 .mb20{margin-bottom: 20px;}
+.mb30{margin-bottom: 30px;}
+.mb50{margin-bottom: 50px;}
+.pt30{padding-top: 30px;}
+.pt50{padding-top: 50px;}
+.pt60{padding-top: 60px;}
 
 .navbar .navbar-nav .menu{
     font-weight: 500;font-size: 16px;color: #262626;
@@ -30,7 +35,6 @@ body{font-family: 'Noto Sans KR', sans-serif;color: #262626;}
     100%{bottom: 30px;}
 }
 
-.sec01{background: pink;}
 .sec01 .sec01_lf{
     background:url(../images/sec01_lf_bg.png) no-repeat center;
     background-size: cover;
@@ -54,24 +58,41 @@ body{font-family: 'Noto Sans KR', sans-serif;color: #262626;}
     position: absolute;top: 50%;left: 50%;
     transform: translate(-50%,-50%);
 }
-
-.rt_up h2{font-weight: 700;font-size: 40px;position: relative;}
+.sec01_wrap{width: 100%;}
+.rt_up h2{font-weight: 700;font-size: 40px;position: relative;display: inline;}
 .rt_up h2:after{
     content:"";display: block;
     width: 15px;height: 15px;
     background: #0AF783;border-radius: 8px;
-    position: absolute;right: -10px;bottom: 0;
+    position: absolute;bottom: 5px;right: -20px;
 }
 .rt_up h4{font-weight: 500;font-size: 24px;color: #6DE6E4;}
 .rt_md{
+    width: 483px;height: 100%;
     border-radius: 30px;padding: 30px;
-    background:#fff url(../images/sec1_slide_img01.png) no-repeat;
+    background-color: #fff;
+    background-repeat: no-repeat;
+    background-position: 200px 0;
+    background-size: contain;
+    margin: auto;
 }
+.rt_md.slide01{background-image: url(../images/sec1_slide_img01.png);}
+.rt_md.slide02{background-image: url(../images/sec1_slide_img02.png);}
+.rt_md.slide03{background-image: url(../images/sec1_slide_img03.png);}
+.rt_md.slide04{background-image: url(../images/sec1_slide_img04.png);}
+.rt_md.slide05{background-image: url(../images/sec1_slide_img05.png);}
 .rt_index{
     display: inline-block;border-radius: 60px;
     font-weight: 500;font-size: 14px;padding: 6px 18px;
+    box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.3);
+}
+.purple{
     background: linear-gradient(270deg, #D084FF 0.9%, #2E40FA 109.58%);
 }
+.green{
+    background: linear-gradient(90deg, #11C1CA 10.53%, #35E39F 94.74%);
+}
+
 .rt_md .rt_txt h2{font-weight: 500;font-size: 24px;}
 .rt_md .rt_txt h4{font-weight: 500;font-size: 18px;}
 .rt_md .rt_txt span{font-weight: 700;}
@@ -81,6 +102,144 @@ body{font-family: 'Noto Sans KR', sans-serif;color: #262626;}
     padding: 8px 12px;font-weight: 500;
     font-size: 12px;color: #704BE3;
 }
+.rt_bt p{
+    font-size: 20px;font-weight: 500;color: #acacac;
+}
+.swiper01{width: 100%;}
+
+.next-btn,.prev-btn{
+    width: 96px;height: 96px;
+    background-position: center;
+    background-size: cover;
+    transform: translateY(-50%);
+}
+.swiper-button-next::after,
+.swiper-button-prev::after {
+  display: none;
+}
+.next-btn{
+    background-image: url(../images/next_slide.png);right: 60px;
+}
+.prev-btn{
+    background-image: url(../images/prev_slide.png);left: 60px;
+}
+
+.sec02{
+    background: url(../images/sec02_bg.png) no-repeat center;
+    background-size: cover;
+}
+.sec02_title h2{
+    position: relative;display: inline;
+    font-weight: 700;font-size: 40px;
+}
+.sec02_title h2:after{
+    content:"";display: block;
+    width: 15px;height: 15px;
+    background: #0AF783;border-radius: 8px;
+    position: absolute;bottom: 5px;right: -20px;
+}
+
+.sec2-box{
+    padding-right: 70px;height: 100%;
+    display: flex;justify-content: center;align-items: center;
+}
+.sec2-event{border-radius:30px;overflow: hidden;}
+.e-wrap{background: #fff;padding: 25px 31px;}
+.e-index{
+    display: inline-block;border-radius: 60px;
+    font-weight: 500;font-size: 14px;padding: 6px 18px;
+    box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.3);
+}
+.e-txt,.e-img .card-body p{font-weight: 500;font-size: 14px;}
+.e-txt span{font-weight: 700;}
+.e-date{background: rgba(25, 16, 70, 0.6);padding: 15px 0;font-weight: 300;}
+.e-date p{font-size: 18px;}
+.e-date span{font-size: 14px;color: #6DE6E4;}
+
+.i-title{font-weight: 500;font-size: 16px;}
+input[type="text"]{border: 0 none;}
+input[type="text"]::placeholder{font-size: 14px;}
+input.box-info{
+    text-indent: 10px;
+    width: 100%;height: 40px;
+    border-radius: 5px;margin-bottom: 10px;
+}
+input.zipcode{
+    width: 180px;height: 40px;border-radius: 5px;
+    margin-bottom: 10px;margin-right: 6px;text-indent: 10px;
+}
+.btn-zip{
+    width: 80px;height: 40px;transition: 0.3s;
+    font-weight: 500;font-size: 12px;color: #fff;
+    background: none;border: 1px solid #fff;border-radius: 5px;
+}
+.btn-zip:hover{background: #fff;color:#191046;}
+.caution{font-size: 12px;}
+
+.i-box textarea{
+    width: 100%;height: 100px;border-radius: 5px;
+    color: #666;font-size: 12px;padding: 10px;
+}
+/* .comment{width: 100%;height: 100px;border-radius: 5px;}
+.commnet::placeholder{color: red;} */
+.i-box-txt{
+    border-radius: 5px;overflow: hidden;width: 100%;height: 120px;
+}
+.i-box-txt textarea{
+    width: 100%;height: 120px;padding: 10px;
+    font-size: 10px;color: #666;
+    border: 0 none;
+}
+.check-box label{font-size: 12px;}
+
+#privacy_submit{
+    width: 100%;height: 40px;
+    font-weight: 700;font-size: 16px;
+    border: 0 none;border-radius: 60px;
+}
+
+
+.sec03_lf{
+    background: url(../images/sec03_lf.png) no-repeat center;
+    background-size: cover;
+    width: 50%;height: 100%;float: left;
+    position: relative;
+}
+.sec03_rt{
+    background: url(../images/sec03_rt.png) no-repeat center;
+    background-size: cover;
+    width: 50%;height: 100%;float: left;
+    position: relative;
+}
+
+.sec03_lf .lf03_wrap,.sec03_rt .rt03_wrap{
+    position: absolute;top: 50%;
+    transform: translateY(-50%);width: 100%;
+}
+.lf03_title h2{
+    font-weight: 700;font-size: 40px;
+    display: inline;position: relative;
+}
+.lf03_title h2:after{
+    content:"";display: block;
+    width: 15px;height: 15px;
+    background: #0AF783;border-radius: 8px;
+    position: absolute;bottom: 5px;right: -20px;
+}
+.lf03-box{
+    width: 70%;background: #2A2A2A;font-weight: 700;
+    box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.1);
+    margin: 0 auto;border-radius: 15px;padding: 12px 48px;
+}
+.lf03-box h4{
+    font-size: 20px;color: #cdcdcd;
+}
+.lf03-box p{
+    font-size: 14px;color: #acacac;font-weight: 500;
+}
+.rt03_title h4{font-weight: 700;font-size: 40px;}
+.rt03_title p{font-weight: normal;font-size: 18px;}
+.view li{float: left;width: 50%;}
 
 @media screen and (max-width:757px){
     .maintxt h2{font-size: 4vw;}
